--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=VT323&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=VT323&display=swap'); */
 @import "tailwindcss";
 
 body {
@@ -6,6 +6,16 @@ body {
   min-height: 100svh;
   overflow-x: hidden;
   overflow: hidden; /* prevent horizontal scrolling initially */
+}
+
+@font-face {
+  font-family: "Orbitron";
+  src: url("/fonts/Orbitron.ttf");
+}
+
+@font-face {
+  font-family: "VT323";
+  src: url("/fonts/VT323.ttf");
 }
 
 :root {
